--- a/.env
+++ b/.env
@@ -1,13 +1,22 @@
+# Server Configuration
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/financial-assistant
-JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
 
-# Default Activation Periods (in days)
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/financial-assistant
+
+# JWT Configuration
+JWT_SECRET=your-secret-key-here
+JWT_EXPIRES_IN=30d
+
+# Activation Periods (in days)
 ACTIVATION_PERIOD_TRIAL=7
 ACTIVATION_PERIOD_MONTHLY=30
 ACTIVATION_PERIOD_YEARLY=365
 
-# WhatsApp Bot Config
+# Bot Configuration
 BOT_NAME=Financial Assistant
 DEFAULT_LANGUAGE=id
+
+# WhatsApp Session
+WHATSAPP_SESSION_PATH=./whatsapp-session
